--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .dark {
   --background: #0a0a0a;
   --foreground: #ededed;
@@ -10,7 +11,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-hr {
+hr {all: unset;
   border: none;
   height: 2px;
   background-color: #ff0000;
