--- a/app/components/Navigation/styles.css
+++ b/app/components/Navigation/styles.css
@@ -10,8 +10,7 @@
   align-items: center;
   padding: 0 20px;
   z-index: 1000;
-  background: rgba(0, 0, 0, 1);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  background: transparent;
 }
 @media (max-width: 768px) {
   .navbar {
