--- a/app/globals.css
+++ b/app/globals.css
@@ -3,23 +3,8 @@
 @tailwind utilities;
 
 
-.dark {
-  --background: #d9d9d9;
-  --foreground: #ededed;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-hr {all: unset;
-  border: none;
-  height: 2px;
-  background-color: #ff0000;
-  transition: background-color 0.3s ease;
-}
-
-hr:hover {
-  background-color: #ff7e5f;
+:root{
+  background-color: #d9d9d9;
 }
 
 @layer base {
